# chat-cleaner-for-instagram-dms

./: FolderSetup.md  README.md  pyproject.toml
scripts/: run_pipeline.py
src/ig_dm_cleaner/: __init__.py  cleaner.py  data_gen.py  pipeline.py  processor.py  validation.py
tests/: conftest.py  test_cleaner.py  test_data_gen.py  test_pipeline.py  test_processor.py  test_validation.py
