[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ig-dm-cleaner"
version = "0.1.0"
description = "Convert Instagram DM JSON exports into LLM fine-tuning datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["instagram","fine-tuning","nlp","datasets-generator","dataset","llm","JSON"]
classifier = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"Topic :: Software Development :: Libraries :: Python Modules",

dependencies = []
[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/raghavexe"
Repository = "https://github.com/raghavexe/chat-cleaner-for-instagram-dms"
Issues = "https://github.com/raghavexe/chat-cleaner-for-instagram-dms/issues"

[project.scripts]
ig-dm-cleaner = "ig_dm_cleaner.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
include=["ig_dm_cleaner"]

[tool.setuptools]
package-dir = {"" = "src"}